# ChangeLog for dev-ruby/oauth2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/oauth2/ChangeLog,v 1.8 2011/01/02 13:45:07 graaff Exp $

  02 Jan 2011; Hans de Graaff <graaff@gentoo.org> -oauth2-0.0.10.ebuild:
  Remove old version.

*oauth2-0.0.13 (22 Aug 2010)

  22 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +oauth2-0.0.13.ebuild:
  Version bump.

*oauth2-0.0.10 (19 Jun 2010)

  19 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -oauth2-0.0.8.ebuild, -files/oauth2-0.0.8-gentoo.patch,
  -oauth2-0.0.9.ebuild, -files/oauth2-0.0.9-gentoo.patch,
  +oauth2-0.0.10.ebuild:
  Version bump, remove patch.

*oauth2-0.0.9 (19 Jun 2010)

  19 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +oauth2-0.0.9.ebuild, +files/oauth2-0.0.9-gentoo.patch:
  Version bump, new ebuild needs multi_json (and a fixed one) and is further
  fixed.

  18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> oauth2-0.0.8.ebuild:
  Add ~x86, tested on development container.

  30 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org> oauth2-0.0.8.ebuild,
  +files/oauth2-0.0.8-gentoo.patch:
  Fix documentation build if RSpec is not present.

  30 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org> oauth2-0.0.8.ebuild:
  Add Ruby 1.9 support.

*oauth2-0.0.8 (30 Apr 2010)

  30 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +oauth2-0.0.8.ebuild, +metadata.xml:
  Initial impor of the OAuth2 gem, to use the new Facebook authentication
  APIs.
